+ rfe #3517354 [interface] Allow disabling CodeMirror with $cfg['CodemirrorEnable'] = false
+ rfe #3475567 [interface] New directive $cfg['HideStructureActions']
- bug #3468272 [import] Fixed import of ODS with more paragraphs in a cell
- bug #3510196 [core] Improved redirecting with ForceSSL option
+ rfe #3518852 [edit] edit blob but not other binary, new option $cfg['ProtectBinary'] = 'noblob'

3.5.1.0 (not yet released)
- bug #3510784 [edit] Limit clause ignored when sort order is remembered
- bug #3511471 [interface] View name not seen in navi panel (MySQL 5.1)
- bug #3512916 [display] Right frame reloads after displaying SQL result(zero rows)
- bug [interface] Fixed missing Codemirror for inline query edit when exporting a result set
- bug #3514490 [auth] Multiple Navigation panels bug still present
- bug #3515181 [users] Error in create user + underscore + create database
- bug #3515666 [display] Profiling chart shows wrong data
- bug #3516037 [auth] JS includes missing in auth config error page
- bug #3516183 [display] Missing image extension
- bug [display] Added missing icons in original theme
- bug #3516761 [edit] Query error after search
- bug #3516405 [display] Chart title is getting wrong within chart export
- bug #3517021 [interface] Header links except 'More' hide after closing dialog
- bug #3516817 [interface] "More" actions in table structure
- bug #3518484 [privileges] PMA_sqlAddSlashes() does not quote the table names correctly
- bug #3518983 [designer] Error messages do not appear in the Designer
- bug #3519747 [interface] Suhosin patch warning incorrectly displayed

3.5.0.0 (2012-04-07)
+ rfe #2021981 [interface] Add support for mass prefix change.
+ "up to date" message on main page when current version is up to date
+ Update to jQuery 1.6.2
+ Patch #3256122 [search] Show/hide db search results
+ Patch #3302354 Add gettext wrappers around a message
+ Remove deprecated function PMA_DBI_get_fields
+ rfe #2098927 Remember recent tables